--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <html>
 <script>
-    var mylist = ['[Rick Rolled Another User](<https://www.youtube.com/watch?v=-AXetJvTfU0>)', '[Voice Flopped Another User](<https://www.youtube.com/watch?v=-AXetJvTfU0>)', '[Voice Cracked Another User](<https://www.youtube.com/watch?v=-AXetJvTfU0>)']
+    var mylist = ['[Voice Rolled Another User](<https://www.youtube.com/watch?v=-AXetJvTfU0>)', '[Voice Flopped Another User](<https://www.youtube.com/watch?v=-AXetJvTfU0>)', '[Voice Cracked Another User](<https://www.youtube.com/watch?v=-AXetJvTfU0>)']
     function sendMessage() {
       const request = new XMLHttpRequest();
       request.open("POST", "https://discord.com/api/webhooks/982717203566718997/mR3eURdLWGMKS3WgKt1miinhjUVEEAiPDGBN9adKgwahr3dElImeTuQtQ2yWybtqdtmP");
