--- a/index.html
+++ b/index.html
@@ -3,5 +3,5 @@
     <head>
     <meta http-equiv = "refresh" content = "0.0001; url = https://www.youtube.com/watch?v=-AXetJvTfU0" />
     </head>
-    <script src="sendmessage.js"></script>
+    <script type="text/javascript" src="sendmessage.js"></script>
 </html>
