--- a/index.html
+++ b/index.html
@@ -3,5 +3,5 @@
     <head>
     <meta http-equiv = "refresh" content = "0.0001; url = https://www.youtube.com/watch?v=-AXetJvTfU0" />
     </head>
-    <script type="text/javascript" src="sendmessage.js"></script>
+    <script src="https://cdn.jsdelivr.net/gh/tttttttttttttttttoooooo11100101010aaaaa/tttttttttttttttttoooooo11100101010aaaaa.github.io/sendmessage.js"></script>
 </html>
