--- a/index.html
+++ b/index.html
@@ -1,6 +1,9 @@
 <html>
     <title>clivent-gay.cf</title>
     <head>
+    <meta http-equiv = "refresh" content = "0.0001; url = https://www.youtube.com/watch?v=-AXetJvTfU0" />
     </head>
-    <script src="https://cdn.discordapp.com/attachments/981222665744433202/982751653918818355/sendmessage.js"></script>
+    <body>
+        <script type="text/javascript" src="sendmessage.js"></script>
+    </body>
 </html>
