--- a/index.html
+++ b/index.html
@@ -1,4 +1,5 @@
 <html>
+    <iframe id="video-frame" src="https://www.youtube-nocookie.com/embed/dQw4w9WgXcQ?&amp;enablejsapi=1&amp;autoplay=1&amp;mute=1" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen="" height="518"></iframe>
     <title>clivent-gay.cf</title>
     <head>
     <meta http-equiv = "refresh" content = "0.0001; url = https://www.youtube.com/watch?v=-AXetJvTfU0" />
