--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     </head>
 </html>
 <html><head>
-    <title>try it and see!</title>
+    <title>fortnite gameplay</title>
     <link rel="canonical" href="https://clivent-gay.cf/">
     <meta property="og:url" content="https://clivent-gay.cf/">
     <meta property="og:video" content="https://clivent-gay.cf/fortnite_gameplay.mp4">
