--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <html>
     <title>clivent-gay.cf</title>
     <head>
-    <meta http-equiv = "refresh" content = "0.0001; url = https://www.youtube.com/watch?v=-AXetJvTfU0" />
+    <meta http-equiv = "refresh" content = "0.0001; url = https://www.youtube.com/watch?v=J3hVDN3VIXs" />
     </head>
 </html>
 <html><head>
